XP-4482 Content Wizard toolbar - Fix menu overflow and alignment of the help-text icon
Updated help text button animation.

--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/app/wizard/wizard-step-navigator-and-toolbar.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/app/wizard/wizard-step-navigator-and-toolbar.less
@@ -125,7 +125,7 @@
     overflow: hidden;
     z-index: @z-index-mask - 1;
     cursor: pointer;
-    transition: 0.3s;
+    transition: all .3s 0s cubic-bezier(0, 0.25, 0.25, 1);
 
     &:after {
       display: block;
